test push galleryapp

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-{ "name": "iutnc/galleryapp",
+{ "name": "atelier/galleryapp",
   "description": "Encore mieur que l'original",
   "type": "project",
   
