--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,8 @@
 driver    = mysql
 host    = localhost
-database  = lebedev
-username  = lebedev
-password  = kOlobond87
+database  = atelier1
+username  = root
+password  = 
 charset   = utf8
 collation = utf8_unicode_ci
 prefix    = 
