--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   
   "require": {
       "illuminate/database": "*",
-      "phpunit/phpunit": "*"
+      "phpunit/phpunit": "*",
+      "fakerphp/faker": "^1.20"
   }
 }
