--- a/config/config.ini
+++ b/config/config.ini
@@ -1,8 +1,8 @@
-driver    = mysql
-host    = localhost
-database  = atelier1
-username  = root
-password  = 
-charset   = utf8
-collation = utf8_unicode_ci
-prefix    = 
+driver="mysql"
+host="sql849.main-hosting.eu"
+database="u560558504_atelier1"
+username="u560558504_atelier1"
+charset="utf8"
+collation="utf8_unicode_ci"
+password="8Um05T&tdB"
+prefix=""
